# lerobot_robot_lekiwi_pincopen

./: README.md  pyproject.toml
.github/workflows/: ci.yml
lerobot_robot_lekiwi_pincopen/: __init__.py  config_lekiwi_pincopen.py  config_so101_leader_sprung.py  lekiwi_host.py  lekiwi_pincopen.py  so101_leader_sprung.py
tests/: test_plugin.py
