[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
# The distribution name MUST keep the lerobot_robot_ prefix and match the import
# package name exactly: lerobot's register_third_party_plugins() discovers installed
# distributions by that prefix and then imports the distribution name as a module.
# (setuptools preserves the underscore Name in metadata; a backend that normalizes
# it to hyphens would break discovery.)
name = "lerobot_robot_lekiwi_pincopen"
version = "0.1.0"
description = "PincOpen LeKiwi (STS3250 arm joints + PincOpen gripper) as a LeRobot third-party robot plugin"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Xingdong Zuo" }]
requires-python = ">=3.10"
keywords = ["lerobot", "robotics", "lekiwi", "plugin", "feetech"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Works against lerobot 0.5.x and 0.6.x; the feetech extra brings the servo SDK the
# bus needs. In an env that already carries an (editable) lerobot clone this resolves
# as already-satisfied.
dependencies = ["lerobot[feetech]>=0.5.2"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6.0",
]

[project.urls]
Repository = "https://github.com/zuoxingdong/lerobot_robot_lekiwi_pincopen"

[tool.setuptools.packages.find]
include = ["lerobot_robot_lekiwi_pincopen*"]

[tool.ruff]
target-version = "py310"
line-length = 110
